Aula Best Minds Apex/Aula Best Minds APEX/force-app/main/default/objects/Session_Registration__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Session Registrations</relationshipLabel>
    <relationshipName>Session_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>