Aula Best Minds Apex/Aula Best Minds APEX/force-app/main/default/objects/Session_Registration__c/fields/Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Room_Name__c</fullName>
    <formula>Session_Name__r.Room_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Name</label>
    <type>Text</type>
</CustomField>