Aula Best Minds Apex/Aula Best Minds APEX/force-app/main/default/objects/Session_Registration__c/fields/Session_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Date_Time__c</fullName>
    <formula>Session_Name__r.Session_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Date/Time</label>
    <type>DateTime</type>
</CustomField>